# gen

./: challenge1.py  challenge2.py  challenge3.py  main.py  pyproject.toml  walletaddresses.txt
