[tool.poetry]
name = "repl_python3_Eden-Network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
Flask = "^2.0.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
